fix images issue on Pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#carousel"><img src="images/_logo.png" alt="logo"></a>
+                <a href="#carousel"><img src="images/logo.png" alt="logo"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,7 +58,7 @@
 
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="images/_dark_vador1.png" alt="Dark Vador">
+                <img src="images/dark_vador1.png" alt="Dark Vador">
                 <div class="carousel-caption">
                     <h1>Sauron is a very good bro,</h1>
                     <p>Please, help him to find his ring</p>
@@ -152,7 +152,7 @@
         <article role="tabpanel" class="tab-pane fade in active" id="dangerous">
             <div class="col-xs-12 col-md-4">
                 <figure class="foeValue thumbnail">
-                    <img src="images/_gandalf1.png" alt="Gandalf"/>
+                    <img src="images/gandalf1.png" alt="Gandalf"/>
                     <figcaption class="foeDescription">
                         <h4>Gandalf</h4>
                         <p>reward<br><span>1000</span> golden coins</p>
@@ -164,7 +164,7 @@
             </div>
             <div class="col-xs-12 col-md-4">
                 <figure class="foeValue thumbnail">
-                    <img src="images/_aragorn.png" alt="Aragorn"/>
+                    <img src="images/aragorn.png" alt="Aragorn"/>
                     <figcaption class="foeDescription">
                         <h4>Aragorn</h4>
                         <p>reward<br><span>800</span> golden coins</p>
@@ -176,7 +176,7 @@
             </div>
             <div class="col-xs-12 col-md-4">
                 <figure class="foeValue thumbnail ">
-                    <img src="images/_gimli.png" alt="Gimli"/>
+                    <img src="images/gimli.png" alt="Gimli"/>
                     <figcaption class="foeDescription">
                         <h4>Gimli</h4>
                         <p><span>dead</span></p>
@@ -213,7 +213,7 @@
             </div>
             <div class="col-xs-12 col-md-4">
                 <figure class="foeValue thumbnail">
-                    <img src="images/_gimli.png" alt="Gimli" id="gimli"/>
+                    <img src="images/gimli.png" alt="Gimli" id="gimli"/>
                     <figcaption class="foeDescription">
                         <h4>Gimli</h4>
                     </figcaption>
@@ -231,7 +231,7 @@
 <section id="rewards">
     <h2><span class="decoration">w</span>I have capture one of them, how to get my reward ?<span
             class="decoration">w</span></h2>
-    <img src="./images/_coin_sauron1.png" alt="rewards" class="pull-right">
+    <img src="./images/coin_sauron1.png" alt="rewards" class="pull-right">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit
         amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a,
         semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum
@@ -248,25 +248,25 @@
     <div class="media col-xs-12 col-md-6">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" src="./images/_hunter1.png" alt="hunter1">
+                <img class="media-object" src="./images/hunter1.png" alt="hunter1">
             </a>
         </div>
         <div class="media-body">
             <h4 class="media-heading">Elveskiller22</h4>
             <p>2 captures -<a href="#">Profile</a></p>
-            <button><img src="./images/_logo1.png" alt="logo"/>12 hates</button>
+            <button><img src="./images/logo1.png" alt="logo"/>12 hates</button>
         </div>
     </div>
     <div class="media col-xs-12 col-md-6">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" src="./images/_hunter2.png" alt="hunter2">
+                <img class="media-object" src="./images/hunter2.png" alt="hunter2">
             </a>
         </div>
         <div class="media-body">
             <h4 class="media-heading">Goblin45</h4>
             <p>1 captures -<a href="#">Profile</a></p>
-            <button><img src="./images/_logo1.png" alt="logo"/>18 hates</button>
+            <button><img src="./images/logo1.png" alt="logo"/>18 hates</button>
         </div>
     </div>
 </section>
@@ -316,7 +316,7 @@
                 <p>My preciooooooussssss ! Hrk Hrk, we want our preciooooouuussss !!</p>
                 <footer>Gollum</footer>
             </blockquote>
-            <img src="./images/_gollum.png" alt="Gollum" class="col-sm-3">
+            <img src="./images/gollum.png" alt="Gollum" class="col-sm-3">
         </div>
     </div>
 </section>
@@ -338,10 +338,10 @@
                 fermentum
                 diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.
                 Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue</p>
-            <img src="images/_army.png" alt="army" class="col-xs-offset-2 col-xs-8 col-md-offset-0 col-md-3" id="army">
+            <img src="images/army.png" alt="army" class="col-xs-offset-2 col-xs-8 col-md-offset-0 col-md-3" id="army">
         </div>
         <div class="buttonJoin row">
-            <img src="images/_weneedyou-1.png" alt="we need you" id="weNeedYou"
+            <img src="images/weneedyou-1.png" alt="we need you" id="weNeedYou"
                  class="col-xs-offset-2 col-xs-8 col-md-offset-2 col-md-3">
             <div class="inputButton">
                 <h3 class="col-sm-12 col-md-offset-1 col-md-4 text-center">More info on</h3>
@@ -371,7 +371,7 @@
             <p><textarea name="message" placeholder="Your message to the master" rows="9"
                          class="form-control"></textarea></p>
         </form>
-        <img src="images/_map.png" alt="map" class="col-md-6 img-responsive">
+        <img src="images/map.png" alt="map" class="col-md-6 img-responsive">
     </div>
 </section>
 
@@ -392,7 +392,7 @@
         <ul class="nav col-md-4">
             <li><a href="www.sauron4ever.com">Sauron4Ever.com</a></li>
             <li><a href="twitter">Follow him also on twitter</a></li>
-            <li><img src="images/_logo.png" alt="logo"></li>
+            <li><img src="images/logo.png" alt="logo"></li>
         </ul>
     </nav>
 </footer>
